--- a/pwa/package.json
+++ b/pwa/package.json
@@ -10,8 +10,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "artplayer": "^5.1.1",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.3",
+    "hls.js": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
